feat：优化mybatis新增的，实现更高性能的插入

--- a/laokou-service/laokou-module/laokou-api/laokou-api-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-api/laokou-api-start/src/main/resources/application.yml
@@ -1,2 +1,10 @@
 server:
   port: 10004
+
+spring:
+  application:
+    name: @pom.parent.artifactId@
+  mqtt:
+    username: admin
+    password: laokou123
+    host: tcp://127.0.0.1:18083
