--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -97,7 +97,7 @@
         <!--rocketmq-logappender版本-->
         <rocketmq-logappender.version>5.0.0-PREVIEW</rocketmq-logappender.version>
         <!--kafka版本-->
-        <kafka.version>3.0.10</kafka.version>
+        <kafka.version>3.0.12</kafka.version>
         <!--netty版本-->
         <netty.version>4.1.100.Final</netty.version>
         <!--gson版本-->
@@ -123,6 +123,11 @@
     <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.laokou</groupId>
+                <artifactId>laokou-logstash-app</artifactId>
+                <version>${laokou.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>log4j2-ttl-thread-context-map</artifactId>
