--- a/laokou-service/laokou-module/laokou-logstash/laokou-logstash-client/pom.xml
+++ b/laokou-service/laokou-module/laokou-logstash/laokou-logstash-client/pom.xml
@@ -3,18 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>laokou-module</artifactId>
+        <artifactId>laokou-logstash</artifactId>
         <groupId>org.laokou</groupId>
         <version>3.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>laokou-logstash</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>laokou-logstash-start</module>
-        <module>laokou-logstash-app</module>
-        <module>laokou-logstash-client</module>
-    </modules>
-
+    <artifactId>laokou-logstash-client</artifactId>
 
 </project>
