--- a/laokou-service/laokou-module/laokou-logstash/laokou-logstash-app/pom.xml
+++ b/laokou-service/laokou-module/laokou-logstash/laokou-logstash-app/pom.xml
@@ -15,6 +15,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-log4j2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-logstash-infrastructure</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
