--- a/laokou-service/laokou-module/laokou-logstash/laokou-logstash-infrastructure/pom.xml
+++ b/laokou-service/laokou-module/laokou-logstash/laokou-logstash-infrastructure/pom.xml
@@ -8,6 +8,13 @@
         <version>3.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>laokou-logstash-client</artifactId>
+    <artifactId>laokou-logstash-infrastructure</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-elasticsearch</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
