--- a/laokou-service/laokou-module/laokou-im/laokou-im-start/pom.xml
+++ b/laokou-service/laokou-module/laokou-im/laokou-im-start/pom.xml
@@ -80,6 +80,16 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-trace</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-web</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
     <build>
