--- a/laokou-service/laokou-module/laokou-logstash/laokou-logstash-app/pom.xml
+++ b/laokou-service/laokou-module/laokou-logstash/laokou-logstash-app/pom.xml
@@ -19,6 +19,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-logstash-infrastructure</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-common-xxl-job</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
