--- a/laokou-service/laokou-module/pom.xml
+++ b/laokou-service/laokou-module/pom.xml
@@ -33,5 +33,6 @@
         <module>laokou-api</module>
         <module>laokou-flyway</module>
         <module>laokou-logstash</module>
+        <module>laokou-iot</module>
     </modules>
 </project>
