--- a/laokou-cloud/laokou-xxl-job/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-xxl-job/src/main/resources/application.yml
@@ -12,7 +12,7 @@ management:
 mybatis:
   mapper-locations: classpath:/mybatis-mapper/*Mapper.xml
 server:
-  port: 8082
+  port: 9090
   servlet:
     context-path: /xxl-job-admin
 spring:
@@ -67,7 +67,7 @@ spring:
       static-locations: classpath:/static/
 xxl:
   job:
-    access-token: default_token
+    access-token: yRagfkAddGXdTySYTFzhvMguinulMIMSCcXUbljWDhe
     i18n: zh_CN
     intentionalities: 30
     trigger-pool:
