--- a/laokou-service/laokou-module/laokou-api/pom.xml
+++ b/laokou-service/laokou-module/laokou-api/pom.xml
@@ -32,6 +32,7 @@
 
     <modules>
         <module>laokou-api-start</module>
+        <module>laokou-api-adapter</module>
     </modules>
 
 </project>
