--- a/laokou-common/laokou-common-mqtt/pom.xml
+++ b/laokou-common/laokou-common-mqtt/pom.xml
@@ -19,6 +19,10 @@
             <groupId>org.laokou</groupId>
             <artifactId>laokou-common-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.mqttv5.client</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
