--- a/laokou-service/laokou-module/laokou-iot/laokou-iot-start/pom.xml
+++ b/laokou-service/laokou-module/laokou-iot/laokou-iot-start/pom.xml
@@ -8,13 +8,17 @@
         <version>3.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>laokou-iot-start</artifactId>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.laokou</groupId>
+            <artifactId>laokou-iot-app</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
