--- a/doc/deploy/docker-compose.yml
+++ b/doc/deploy/docker-compose.yml
@@ -15,30 +15,36 @@
 #  */
 version: '3.2'
 services:
-  laokou-gateway-service:
+  laokou-gateway:
     tty: true
     image: registry.cn-hangzhou.aliyuncs.com/koushenhai/laokou-gateway:3.1.5
     container_name: laokou-gateway
     environment:
-      - TZ="Asia/Shanghai"
-    restart: on-failure
+      - TZ=Asia/Shanghai
     ports:
       - "5555:5555"
-  laokou-admin-service:
+    restart: on-failure
+    networks:
+      - bridge
+  laokou-admin:
     tty: true
     image: registry.cn-hangzhou.aliyuncs.com/koushenhai/laokou-admin:3.1.5
     container_name: laokou-admin
     environment:
-      - TZ="Asia/Shanghai"
+      - TZ=Asia/Shanghai
     ports:
       - "9999:9999"
     restart: on-failure
-  laokou-auth-service:
+    networks:
+      - bridge
+  laokou-auth:
     tty: true
     image: registry.cn-hangzhou.aliyuncs.com/koushenhai/laokou-auth:3.1.5
     container_name: laokou-auth
     environment:
-      - TZ="Asia/Shanghai"
+      - TZ=Asia/Shanghai
     ports:
       - "1111:1111"
     restart: on-failure
+    networks:
+      - bridge
