--- a/laokou-service/laokou-module/laokou-iot/laokou-iot-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-module/laokou-iot/laokou-iot-start/src/main/resources/application.yml
@@ -1,2 +1,10 @@
 server:
-  port: 10010
+  port: 10005
+
+spring:
+  application:
+    name: @pom.parent.artifactId@
+  mqtt:
+    username: admin
+    password: laokou123
+    host: tcp://127.0.0.1:18083
