--- a/laokou-cloud/laokou-register/docker/Dockerfile
+++ b/laokou-cloud/laokou-register/docker/Dockerfile
@@ -18,5 +18,5 @@ LABEL maintainer="laokou"
 LABEL description="laokou-register"
 COPY laokou-register.jar app.jar
 EXPOSE 8848
-# >/dev/null 2>&1 标准输出和错误输出重定向空文件
-ENTRYPOINT java -Xmx512m -Xms512m -Dnacos.standalone=true -jar app.jar
+# >/dev/null 2>&1 标准输出和错误输出重定向nacos.log
+CMD java $JVM_OPTS $NACOS_OPTS -jar app.jar >/opt/nacos.log 2>&1
