--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,7 @@
                 <MYSQL-USERNAME>root</MYSQL-USERNAME>
                 <MYSQL-PASSWORD>laokou123</MYSQL-PASSWORD>
                 <MYSQL-HOST>192.168.30.133</MYSQL-HOST>
+                <MYSQL-PARAM>characterEncoding=utf8&amp;connectTimeout=1000&amp;socketTimeout=3000&amp;autoReconnect=true&amp;useUnicode=true&amp;useSSL=false&amp;serverTimezone=UTC</MYSQL-PARAM>
                 <MYSQL-DB-NACOS>kcloud_platform_alibaba_nacos</MYSQL-DB-NACOS>
                 <MYSQL-DB-SEATA>kcloud_platform_alibaba_seata</MYSQL-DB-SEATA>
                 <MYSQL-DB-XXL-JOB>kcloud_platform_alibaba_xxl_job</MYSQL-DB-XXL-JOB>
@@ -273,6 +274,7 @@
                 <MYSQL-USERNAME>ENC(aEwhK+oj5wQ/pJfRcfwXAw==)</MYSQL-USERNAME>
                 <MYSQL-PASSWORD>ENC(gruSGjDZ03lAN3qyE5UisGE2tvN3gS3Y)</MYSQL-PASSWORD>
                 <MYSQL-HOST>192.168.30.133</MYSQL-HOST>
+                <MYSQL-PARAM>characterEncoding=utf8&amp;connectTimeout=1000&amp;socketTimeout=3000&amp;autoReconnect=true&amp;useUnicode=true&amp;useSSL=false&amp;serverTimezone=UTC</MYSQL-PARAM>
                 <MYSQL-DB-NACOS>kcloud_platform_alibaba_nacos</MYSQL-DB-NACOS>
                 <MYSQL-DB-SEATA>kcloud_platform_alibaba_seata</MYSQL-DB-SEATA>
                 <MYSQL-DB-XXL-JOB>kcloud_platform_alibaba_xxl_job</MYSQL-DB-XXL-JOB>
@@ -305,6 +307,8 @@
                 <MYSQL-PASSWORD>${MYSQL_PASSWORD:ENC(gruSGjDZ03lAN3qyE5UisGE2tvN3gS3Y)}</MYSQL-PASSWORD>
                 <!--suppress UnresolvedMavenProperty -->
                 <MYSQL-HOST>${MYSQL_HOST:127.0.0.1}</MYSQL-HOST>
+                <!--suppress UnresolvedMavenProperty -->
+                <MYSQL-PARAM>${MYSQL_PARAM:}</MYSQL-PARAM>
                 <!--suppress UnresolvedMavenProperty -->
                 <MYSQL-DB-NACOS>${MYSQL_DB_NACOS:kcloud_platform_alibaba_nacos}</MYSQL-DB-NACOS>
                 <!--suppress UnresolvedMavenProperty -->
