--- a/laokou-cloud/laokou-gateway/docker/Dockerfile
+++ b/laokou-cloud/laokou-gateway/docker/Dockerfile
@@ -18,10 +18,8 @@ FROM docker.io/sunrdocker/jdk17-jre-font-openssl-alpine:latest
 # 信息
 LABEL maintainer="laokou"
 LABEL description="laokou-gateway"
-# 暴露端口
-EXPOSE 5555
 # 复制文件
 COPY laokou-gateway.jar app.jar
-RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai  /etc/localtime && echo 'Asia/Shanghai' >/etc/timezone
-# 执行命令
-ENTRYPOINT java -Xms512m -Xmx512m --add-opens java.base/java.lang=ALL-UNNAMED -Denv=DEV -jar app.jar > app.log
+# 暴露端口
+EXPOSE 5555
+CMD java $JVM_OPTS -jar app.jar >/dev/null 2>&1
