--- a/doc/deploy/app/env/common.env
+++ b/doc/deploy/app/env/common.env
@@ -1,5 +1,5 @@
-NACOS_DISCOVERY_ADDRESS=192.168.30.130:8848
-NACOS_CONFIG_ADDRESS=192.168.30.130:8848
+NACOS_DISCOVERY_ADDRESS=nacos.laokou.org
+NACOS_CONFIG_ADDRESS=nacos.laokou.org
 NACOS_GROUP=LAOKOU_GROUP
 NACOS_NAMESPACE=a61abd4c-ef96-42a5-99a1-616adee531f3
 NACOS_USERNAME=nacos
